# 3dmatchdiff

./: .dockerignore  CMakeLists.txt  Dockerfile  DockerfileDevelopment  README.md  mainPredator.py  package.xml  requirements.txt  setup.py  trainDeepGlobaleRegistration.py
.devcontainer/: Dockerfile  DockerfileDevelopment  DockerfileDevelopmentMac  devcontainer.json  devcontainerOld.json  docker-compose.yml
deepGlobalRegistration/configs/: config.py
deepGlobalRegistration/core/: knn.py  registration.py  trainer.py
deepGlobalRegistration/dataloader/: base_loader.py  data_loaders.py  kitti_loader.py  threedmatch_loader.py
deepGlobalRegistration/model/: __init__.py  pyramidnet.py  simpleunet.py
deepGlobalRegistration/util/: pointcloud.py
docker/: Dockerfile
predator/configs/HPCComputations/: predatorNothing.yaml
predator/configs/HPCComputations/Slurm/: job4.thansen
predator/configs/train/: indoor.yaml  predator1.yaml
predator/data/S3E/: PointcloudAlpha_00010.ply
predator/datasets/: dataloader.py  indoor.py
predator/lib/: benchmark_utils.py  trainer.py
predator/models/: architectures.py
predator/scripts/: download_data_weight.sh  loadKittiModel.py
registrationml/deepGlobalRegistration/core/: metrics.py  trainer.py
registrationml/deepGlobalRegistration/model/: residual_block.py  resunet.py
registrationml/deepGlobalRegistration/scripts/: train_3dmatch.sh
registrationml/deepGlobalRegistration/util/: pointcloud.py
registrationml/predator/configs/: developmentFile.yaml  macLoadModelTest.yaml
registrationml/predator/cpp_wrappers/backup/cpp_neighbors/: wrapper.cpp
registrationml/predator/cpp_wrappers/backup/cpp_subsampling/: wrapper.cpp
registrationml/predator/data/S3E/: PointcloudAlpha_00000.ply
registrationml/predator/datasets/: dataloader.py  indoor.py  kitti.py  modelnet.py  transforms.py
registrationml/predator/kernels/: kernel_points.py
registrationml/predator/lib/: benchmark_utils.py  loss.py  tester.py  trainer.py
registrationml/predator/models/: architectures.py  blocks.py  gcn.py
registrationml/predator/scripts/: demo.py  loadKittiModel.py  rosNodeRegistration.py
srv/: RequestOnePotentialSolution3D.srv
testScripts/: aws_run_dgr.sh  cnn tensorboard.py  cnnTensorboard.py  runningJobs.sh  runningJobsDGR.sh  runningJobsHPC.sh  runningJobsPredator.sh
